--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\luize\\AppData\\Roaming\\NetBeans\\26\\tomcat101.properties
+file.reference.mysql-connector-java-8.0.30.jar=/Users/nathaliabianchini/Desktop/projects/servlet-jsp/src/main/webapp/WEB-INF/lib/mysql-connector-java-8.0.30.jar
 j2ee.server.home=C:/ApacheTomcat/apache-tomcat-10.1.44-windows-x64/apache-tomcat-10.1.44
 j2ee.server.instance=tomcat101:home=C:\\ApacheTomcat\\apache-tomcat-10.1.44-windows-x64\\apache-tomcat-10.1.44
-user.properties.file=C:\\Users\\luize\\AppData\\Roaming\\NetBeans\\26\\build.properties
+user.properties.file=/Users/nathaliabianchini/Library/Application Support/NetBeans/27/build.properties
